--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=com_ra12_projecte1
-
+server.port=8088
 # Connexió a la BBDD
 spring.datasource.url=jdbc:mysql://localhost:3307/db_trokka
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
